--- a/data/tigermine.properties
+++ b/data/tigermine.properties
@@ -63,8 +63,8 @@ project.standalone=true
 # details for sending login e-mails
 mail.host=localhost
 mail.from=account@my_mail_host
-mail.subject=Welcome to MalariaMine
-mail.text=You have successfully created an account on BioTestMine
+mail.subject=Welcome to TigerMine
+mail.text=You have successfully created an account on TigerMine
 
 # text that appears in the header and elsewhere
 project.title=BioTestMine
