--- a/data/tigermine.properties
+++ b/data/tigermine.properties
@@ -11,9 +11,9 @@ os.production.verboseQueryLog=true
 
 # Access to the postgres database to build into and access from the webapp
 db.production.datasource.serverName=localhost
-db.production.datasource.databaseName=tigermine
-db.production.datasource.user=postgres
-db.production.datasource.password=
+db.production.datasource.databaseName=PSQL_DB_NAME
+db.production.datasource.user=PSQL_USER
+db.production.datasource.password=PSQL_PWD
 
 # Temporary database used during the build process, this is re-built
 # as sources are loaded and can be discarded once the warehouse build is complete
@@ -22,16 +22,16 @@ db.production.datasource.password=
 # common target items database
 db.common-tgt-items.datasource.serverName=localhost
 db.common-tgt-items.datasource.databaseName=items-tigermine
-db.common-tgt-items.datasource.user=postgres
-db.common-tgt-items.datasource.password=
+db.common-tgt-items.datasource.user=PSQL_USER
+db.common-tgt-items.datasource.password=PSQL_PWD
 
 
 # userprofile database - used by the webapp to store logins, query history,
 # saved bags, templates and tags.
 db.userprofile-production.datasource.serverName=localhost
 db.userprofile-production.datasource.databaseName=userprofile-tigermine
-db.userprofile-production.datasource.user=postgres
-db.userprofile-production.datasource.password=
+db.userprofile-production.datasource.user=PSQL_USER
+db.userprofile-production.datasource.password=PSQL_PWD
 
 # files for ID resolvers
 #resolver.file.rootpath=/DATA/idresolver
